@@ -1,13 +1,14 @@
 0.28_dev
 -update jpanel with event handling that registers appropriate mouse position.
--add time.set_timer method.
+-add time set_timer method.
 -update display repaint to sync with program iteration.
 -update sprite to revise member groups.
 -update sprite argument handling.
--update sprite.collide_mask to use mask.overlap.
+-update sprite collide_mask to use mask.overlap.
 -add mouse set_cursor and get_cursor methods.
 -update mouse set_cursor to use custom image.
 -update mouse set_cursor to use cursor data.
+-update transform rotozoom to optimize.
 
 0.27    2015-04-12
 -update font to enhance fonts access.
